# agentic-sample

./: README.md  pyproject.toml
agents/: evaluator.py  orchestrator.py  router.py
app/: main.py
core/: patterns.md  types.py
tools/: summarizer.py  web_search_tool.py
workers/: web_search.py
