[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_metatest"

[project]
name = "agentic-sample"
version = "0.1.0"
description = "Research & Brief Generator using Agentic Design Patterns"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.7",
    "httpx>=0.23.3",
    "anyio>=3.6.2",
    "rich>=13.3.5",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.1.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agentic-sample"
"Bug Tracker" = "https://github.com/yourusername/agentic-sample/issues"
